--- a/index.html
+++ b/index.html
@@ -4,24 +4,38 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>iamjaiminrathod ( AI Chat )</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="backend/style.css">
+
 </head>
 <body>
-    <div id="chatBox"></div>
-       <div class="input-area">
-           <input type="text" id="userInput" placeholder="Type a message..." oninput="toggleButton()">
-                <button class="send-btn" id="sendBtn">
-                   <svg width="28" height="28" viewBox="0 0 20 20" fill="currentColor">
-                    <path d="M8.99992 16V6.41407L5.70696 9.70704C5.31643 10.0976 4.68342 10.0976 4.29289 
-                              9.70704C3.90237 9.31652 3.90237 8.6835 4.29289 8.29298L9.29289 3.29298L9.36907 
-                              3.22462C9.76184 2.90427 10.3408 2.92686 10.707 3.29298L15.707 8.29298L15.7753 
-                              8.36915C16.0957 8.76192 16.0731 9.34092 15.707 9.70704C15.3408 10.0732 14.7618 
-                              10.0958 14.3691 9.7754L14.2929 9.70704L10.9999 6.41407V16C10.9999 16.5523 10.5522 
-                              17 9.99992 17C9.44764 17 8.99992 16.5523 8.99992 16Z"></path>
-                        </svg>
-               </button>
-          </div>
+
+<div id="chatBox"></div>
+
+<div class="input-area">
+    <input 
+        type="text" 
+        id="userInput" 
+        placeholder="Type a message..."
+        oninput="toggleButton()"
+        autocomplete="off"
+        autocorrect="off"
+        autocapitalize="off"
+        spellcheck="false"
+    >
+    
+    <button class="send-btn" id="sendBtn">
+        <svg width="28" height="28" viewBox="0 0 20 20" fill="currentColor">
+            <path d="M8.99992 16V6.41407L5.70696 9.70704C5.31643 10.0976 4.68342 10.0976 4.29289 
+                     9.70704C3.90237 9.31652 3.90237 8.6835 4.29289 8.29298L9.29289 3.29298L9.36907 
+                     3.22462C9.76184 2.90427 10.3408 2.92686 10.707 3.29298L15.707 8.29298L15.7753 
+                     8.36915C16.0957 8.76192 16.0731 9.34092 15.707 9.70704C15.3408 10.0732 14.7618 
+                     10.0958 14.3691 9.7754L14.2929 9.70704L10.9999 6.41407V16C10.9999 16.5523 
+                     10.5522 17 9.99992 17C9.44764 17 8.99992 16.5523 8.99992 16Z"></path>
+        </svg>
+    </button>
+</div>
 <script src="backend/data.js"></script>
 </body>
 </html>
