--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         autocomplete="off"
         autocorrect="off"
         autocapitalize="off"
-        spellcheck="false"
-    >
+        spellcheck="false">
     
     <button class="send-btn" id="sendBtn">
         <svg width="28" height="28" viewBox="0 0 20 20" fill="currentColor">
